debugging overflowing issue, again

--- a/src/styles/components/SSURGOPopup.sass
+++ b/src/styles/components/SSURGOPopup.sass
@@ -4,7 +4,7 @@
 	.mapboxgl-popup-content
 		padding: 1.5rem 1rem
 		border-radius: 0px
-		pointer-events: none
+		// pointer-events: none
 		.mapboxgl-popup-close-button
 			font-size: 45px
 			line-height: 0px
@@ -15,7 +15,7 @@
 			padding: 0
 			top: 14px
 			right: 4px
-			pointer-events: auto
+			// pointer-events: auto
 			&:focus
 				outline: none
 		.mapboxgl-popup-text
@@ -31,7 +31,7 @@
 					color: $grey
 					font-size: .826rem
 				.zoom
-					pointer-events: auto
+					// pointer-events: auto
 			.light-blue
 					background-color: $light-blue
 
